apps/shared/rocket-chat/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocket.chat:7.10.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: rocketchat-data
              mountPath: /app/uploads
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: rocketchat-data
          persistentVolumeClaim:
            claimName: rocketchat-pvc
      terminationGracePeriodSeconds: 60
